Fix DataGrid numeric cell content shifting on hover

--- a/src/components/datagrid/_data_grid_data_row.scss
+++ b/src/components/datagrid/_data_grid_data_row.scss
@@ -129,6 +129,7 @@
       @include ouiTextTruncate;
       overflow: hidden;
       white-space: nowrap;
+      width: 100%;
     }
   }
 }
